--- a/backend/config/.env
+++ b/backend/config/.env
@@ -9,13 +9,13 @@ PORT=5000
 MONGO_URI=mongodb://localhost:27017/404js
 
 # Configuration JWT
-JWT_SECRET=votre_secret_jwt_tres_securise_a_changer_en_production
+JWT_SECRET=Mouhamed12@
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
 # Configuration des sessions
 USE_SESSION=false
-SESSION_SECRET=votre_secret_session_tres_securise_a_changer_en_production
+SESSION_SECRET=Mouhamed13@
 SESSION_EXPIRE=3600000
 
 # Configuration Mailtrap pour les emails
